# Chisel

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  skills.md  tasks.md
.github/workflows/: ci.yml  release.yml
bundle/: manifest.json  pack.sh
chisel/: Cargo.toml
chisel-core/: Cargo.toml  README.md
chisel-core/src/: error.rs  lib.rs  security.rs
chisel-core/src/ops/: filesystem.rs  mod.rs  shell.rs
chisel-wasm/: Cargo.toml
chisel-wasm/src/: lib.rs
chisel/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  security.rs  server.rs  state.rs
chisel/src/tools/: filesystem.rs  mod.rs  shell.rs
chisel/tests/: integration.rs  security.rs
chisel/tests/testing_traget/subdir/: hello.txt
chisel/tests/testing_traget/workspace/: note.orig.txt  note.txt
docs/: extensibility.md  tools.md
examples/nodejs-mcp-server/: package.json  server.mjs
examples/python-mcp-server/: server.py
skills/chisel/: SKILL.md
specs/core/: spec.md
specs/server/: spec.md
specs/wasm/: spec.md
