[package]
name = "chisel"
version = "0.1.6"
edition = "2024"

[dependencies]
chisel-core = { path = "../chisel-core" }
anyhow = "1.0.102"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
diffy = "0.4.2"
http-body-util = "0.1.3"
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
subtle = "2.6.1"
tempfile = "3.26.0"
tokio = { version = "1", features = ["full"] }
governor = "0.8"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"
tower = "0.5.3"
